@@ -1,6 +1,6 @@
       subroutine esp_wrtinp
 c
-c $Id: esp_wrtinp.F,v 1.2 1997-10-07 23:41:46 d3j191 Exp $
+c $Id: esp_wrtinp.F,v 1.3 1998-04-21 21:45:17 d3j191 Exp $
 c
       implicit none
 c
@@ -9,57 +9,59 @@ c
 #include "rtdb.fh"
 #include "geom.fh"
 #include "mafdecls.fh"
+#include "util.fh"
 c
       integer i,j,jcon,lcon
 c
       if(me.ne.0) return
 c
-      write(6,601) natoms
+      if(util_print('output',print_medium)) then
+      write(lfnout,601) natoms
   601 format(' Atom parameters',//,
      + ' Number of atoms is ',t45,i12)
 c
-      write(6,602) nbf
+      write(lfnout,602) nbf
   602 format(' Number of basis functions is',t45,i12)
 c
-      write(6,603) mxgrid
+      write(lfnout,603) mxgrid
   603 format(//,' Grid parameters',//,
      + ' Maximum number of grid points is',t45,i12)
 c
-      write(6,604) ngrid
+      write(lfnout,604) ngrid
   604 format(' Number of grid points is',t45,i12)
 c
-      write(6,605) cau2nm*rcut
+      write(lfnout,605) cau2nm*rcut
   605 format(' Grid range',t45,f12.6,' nm')
 c
-      write(6,606) cau2nm*spac
+      write(lfnout,606) cau2nm*spac
   606 format(' Grid spacing',t45,f12.6,' nm')
 c
       if(nconst.gt.1) then
-      write(6,607)
+      write(lfnout,607)
   607 format(//,' Constraint parameters',/)
       jcon=0
       do 1 i=1,nconst-1
       jcon=jcon+1
       lcon=icon(jcon)
-      write(6,608) rcon(i),(icon(jcon+j),j=1,lcon)
+      write(lfnout,608) rcon(i),(icon(jcon+j),j=1,lcon)
   608 format(' Constraint charge',f12.6,' on atoms',10i5)
       jcon=jcon+lcon
     1 continue
       endif
 c
       if(irest.gt.0) then
-      write(6,609)
+      write(lfnout,609)
   609 format(//,' Restraint parameters',/)
       endif
 c
       if(irest.eq.1) then
-      write(6,610) resa
+      write(lfnout,610) resa
   610 format(' Harmonic restraint to zero charge',/,
      + '    with scaling',t30,f12.6,/)
       endif
 c
       if(irest.eq.2) then
-      write(6,611) resa,resb,maxit,toler
+      write(lfnout,611) resa,resb,maxit,toler
   611 format(' Hyperbolic restraint to zero charge',/,
      + '    with scaling',t30,f12.6,/,
      + '         tightness',t30,f12.6,/,
@@ -69,9 +71,11 @@ c
 c
       if(irest.gt.0) then
       if(ihfree.gt.0) then
-      write(6,612)
+      write(lfnout,612)
   612 format(/,' Hydrogen atoms are excluded from the restraints')
       endif
+      endif
+c
       endif
 c
       return
